force-app/main/default/objects/CventEvents__Attendee__c/fields/CventEvents__InvitationEmailBounceReason__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__InvitationEmailBounceReason__c</fullName>
    <label>Invitation Email Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>