force-app/main/default/objects/CventEvents__Attendee__c/fields/CventEvents__OpportunityBindings__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__OpportunityBindings__c</fullName>
    <description>Stores the serialized map of opportunity configuration Id to the Id of opportunity created by this configuration.</description>
    <label>Opportunity Bindings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>