force-app/main/default/objects/CventEvents__Attendee__c/fields/CventEvents__Status__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Invitation Not Sent</fullName>
            </value>
            <value>
                <fullName>Invitation Pending</fullName>
            </value>
            <value>
                <fullName>Invitation Sent</fullName>
            </value>
            <value>
                <fullName>Invitation Opened</fullName>
            </value>
            <value>
                <fullName>Invitation Bounced</fullName>
            </value>
            <value>
                <fullName>Visited</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Denied Approval</fullName>
            </value>
            <value>
                <fullName>Nomination Pending</fullName>
            </value>
            <value>
                <fullName>Nomination Approved</fullName>
            </value>
            <value>
                <fullName>Nomination Denied</fullName>
            </value>
            <value>
                <fullName>Nomination Cancelled</fullName>
            </value>
            <value>
                <fullName>Registration Pending</fullName>
            </value>
            <value>
                <fullName>Substituted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>