force-app/main/default/objects/CventEvents__Attendee__c/listViews/CventEvents__All.listView-meta.xml
<ListView>
    <fullName>CventEvents__All</fullName>
    <columns>NAME</columns>
    <columns>CventEvents__AttendeeName__c</columns>
    <columns>CventEvents__Email__c</columns>
    <columns>CventEvents__Company__c</columns>
    <columns>CventEvents__EventTitle__c</columns>
    <columns>CventEvents__Status__c</columns>
    <columns>CventEvents__Attended__c</columns>
    <columns>CventEvents__IsFreeloader__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>